# gqlpwn

./: .gitignore  README.md  config.yaml  pyproject.toml
gqlpwn/: __init__.py  cli.py
gqlpwn/core/: cognito_auth.py  context_discoverer.py  enumerator.py  introspector.py  parser.py  requester.py  scanner.py  scorer.py
gqlpwn/modules/: auth.py  base.py  bola.py  dos.py  info_disclosure.py  injection.py  ssrf.py  tenant_isolation.py
gqlpwn/output/: reporter.py
gqlpwn/output/templates/: report.html.j2  report.md.j2
gqlpwn/payloads/: cmdi.json  generic.txt  nosqli.json  sqli.json
gqlpwn/utils/: config.py  helpers.py  logger.py  models.py
tests/: test_introspector.py
