[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gqlpwn"
version = "1.0.0"
description = "GraphQL Security Testing Framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ahaan-parmar" }]
requires-python = ">=3.12"
keywords = ["graphql", "security", "pentest", "appsec", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pydantic>=2.7.0",
    "graphql-core>=3.2.3",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "anyio>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
gqlpwn = "gqlpwn.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["gqlpwn*"]

[tool.setuptools.package-data]
gqlpwn = ["payloads/*", "output/templates/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
